# image-resizer-app

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  codecov.yml
.github/workflows/: test.yml
include/image_resizer/: base64.hpp  error.hpp  image_resizer.hpp
src/: base64.cpp  error.cpp  image_resizer.cpp  image_resizer_app.cpp  main.cpp
tests/: CMakeLists.txt  run_tests.sh  test-app.cpp  test-basic-base64.cpp  test-error.cpp  test-image-resizer.cpp  test-rapidjson-parser.cpp
